--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1333,6 +1333,9 @@
       <setting name="save_sre_debug_data" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="sre_button_release_delay" serializeAs="String">
+        <value>0</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
