Commenting, renaming and slight refactor of controller button handling Only files actually changed are MainWindow and ControllerConfiguration, the others just variables that are renamed in those files.

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1336,6 +1336,9 @@
       <setting name="sre_button_release_delay" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="reset_vr_view_control" serializeAs="String">
+        <value>NUMPAD5</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
