--- a/CrewChiefV4/controllerConfigurationData.json
+++ b/CrewChiefV4/controllerConfigurationData.json
@@ -916,6 +916,12 @@
       "deviceGuid": "",
       "buttonIndex": -1,
       "opponentDataCommand": false
-    }
+    },
+  {
+      "action": "reset_vr_view",
+      "deviceGuid": "",
+      "buttonIndex": -1,
+      "opponentDataCommand": false
+    },
   ]
 }
