--- a/appveyor.yml
+++ b/appveyor.yml
@@ -94,6 +94,6 @@
     - git config --global user.email "crewchiefTony@outlook.com"
     - git config --global user.name "Tony Whitley"
     - git checkout master
-    - git merge HTMLhelp
+    - git merge origin/HTMLhelp
     # git diff --quiet && git diff --staged --quiet ensures only commit if files changed
-    - git diff --quiet && git diff --staged --quiet || git commit -am "Appveyor update public/ files" && git push
+    - git diff --quiet && git diff --staged --quiet || git commit -am "Appveyor merge master change_log_for_auto_updated.html" && git push
