Better responses to fuel to end Log.Fuel added

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1339,6 +1339,9 @@
       <setting name="reset_vr_view_control" serializeAs="String">
         <value>NUMPAD5</value>
       </setting>
+      <setting name="log_type_fuel" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
