log_type_fuel default true

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1340,7 +1340,7 @@
         <value>NUMPAD5</value>
       </setting>
       <setting name="log_type_fuel" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
