use naudio playback by default; updated release stuff

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -689,7 +689,7 @@
         <value />
       </setting>
       <setting name="use_naudio" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="NAUDIO_DEVICE_GUID_MESSAGES" serializeAs="String">
         <value />
