--- a/UnitTest/packages.config
+++ b/UnitTest/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net472" />
-  <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net472" />
+  <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net45" />
+  <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net45" />
+  <package id="NUnit" version="3.13.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
 </packages>
