Auto tune sre thresholds

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1339,6 +1339,9 @@
       <setting name="log_type_fuel" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="sre_enable_threshold_tuning" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
