updated the help section for speech recognition; make Windows SRE default

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1044,7 +1044,7 @@
         <value>True</value>
       </setting>
       <setting name="prefer_system_sre" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="use_free_dictation_for_chat" serializeAs="String">
         <value>False</value>
