--- a/CrewChiefV4/Properties/Settings.settings
+++ b/CrewChiefV4/Properties/Settings.settings
@@ -1017,7 +1017,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="prefer_system_sre" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="use_free_dictation_for_chat" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
