--- a/CrewChiefV4/Properties/Settings.settings
+++ b/CrewChiefV4/Properties/Settings.settings
@@ -1310,5 +1310,8 @@
     <Setting Name="sre_enable_threshold_tuning" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="enable_rf1_box_sharing_warnings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
