--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1342,6 +1342,9 @@
       <setting name="sre_enable_threshold_tuning" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="force_resample" serializeAs="String">
+        <value>0</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
