Acc data additions

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1351,6 +1351,9 @@
       <setting name="use_legacy_key_presser" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="use_psi" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
