Improvements and fixes

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1215,9 +1215,6 @@
       <setting name="codriver_rushed_lookahead_seconds" serializeAs="String">
         <value>2</value>
       </setting>
-      <setting name="Setting" serializeAs="String">
-        <value />
-      </setting>
       <setting name="pcars3_launch_exe" serializeAs="String">
         <value>C:/Program Files (x86)/Steam/steamapps/common/Project CARS 3/pCARS3.exe</value>
       </setting>
@@ -1333,9 +1330,6 @@
       <setting name="sre_button_release_delay" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="reset_vr_view_control" serializeAs="String">
-        <value>NUMPAD5</value>
-      </setting>
       <setting name="log_type_fuel" serializeAs="String">
         <value>True</value>
       </setting>
@@ -1350,6 +1344,9 @@
       </setting>
       <setting name="enable_frozen_order_messages" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="force_seated_on_vr_view_reset" serializeAs="String">
+        <value>False</value>
       </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
