--- a/CrewChiefV4/Properties/Settings.settings
+++ b/CrewChiefV4/Properties/Settings.settings
@@ -1187,9 +1187,6 @@
     <Setting Name="codriver_rushed_lookahead_seconds" Type="System.Single" Scope="User">
       <Value Profile="(Default)">2</Value>
     </Setting>
-    <Setting Name="Setting" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
     <Setting Name="pcars3_launch_exe" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:/Program Files (x86)/Steam/steamapps/common/Project CARS 3/pCARS3.exe</Value>
     </Setting>
@@ -1301,9 +1298,6 @@
     <Setting Name="sre_button_release_delay" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="reset_vr_view_control" Type="System.String" Scope="User">
-      <Value Profile="(Default)">NUMPAD5</Value>
-    </Setting>
     <Setting Name="log_type_fuel" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
@@ -1318,6 +1312,9 @@
     </Setting>
     <Setting Name="enable_frozen_order_messages" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="force_seated_on_vr_view_reset" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
