--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1348,6 +1348,9 @@
       <setting name="force_seated_on_vr_view_reset" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="enable_tyre_dirt_pickup_warnings" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
