--- a/appveyor.yml
+++ b/appveyor.yml
@@ -96,6 +96,6 @@
     - git config --global user.email "crewchiefTony@outlook.com"
     - git config --global user.name "Tony Whitley"
     - git checkout master
-    - git merge origin/HTMLhelp
+    - git merge origin/master
     # git diff --quiet && git diff --staged --quiet ensures only commit if files changed
     - git diff --quiet && git diff --staged --quiet || git commit -am "Appveyor merge master change_log_for_auto_updated.html" && git push
