Put appveyor.yml back as it was

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 -
   branches:
     only:
-      - master
+      - HTMLhelp
 
   only_commits:
     files:
@@ -68,7 +68,7 @@
     - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://oauth2:$($env:access_token)@gitlab.com`n" -NoNewline
     - git config --global user.email "crewchiefTony@outlook.com"
     - git config --global user.name "Tony Whitley"
-    - git checkout master
+    - git checkout HTMLhelp
     - git add ./
     # git diff --quiet && git diff --staged --quiet ensures only commit if files changed
     - git diff --quiet && git diff --staged --quiet || git commit -am "Appveyor update public/ files" && git push
