added simple 'speak only when spoken to' mode which blocks all messages except spotter calls and voice comms (or button press) responses

--- a/CrewChiefV4/Properties/Settings.settings
+++ b/CrewChiefV4/Properties/Settings.settings
@@ -1334,5 +1334,8 @@
     <Setting Name="enable_tyre_dirt_pickup_warnings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="speak_only_when_spoken_to" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
