--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1172,6 +1172,21 @@
       <setting name="f1_2020_udp_data_port" serializeAs="String">
         <value>20777</value>
       </setting>
+      <setting name="f1_2021_launch_exe" serializeAs="String">
+        <value>C:/Program Files (x86)/Steam/Steam.exe</value>
+      </setting>
+      <setting name="f1_2021_launch_params" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="launch_f1_2021" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="f1_2021_spotter_car_length" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="f1_2021_udp_data_port" serializeAs="String">
+        <value>20777</value>
+      </setting>
       <setting name="show_vr_settings_as_overlay" serializeAs="String">
         <value>True</value>
       </setting>
@@ -1351,20 +1366,8 @@
       <setting name="enable_tyre_dirt_pickup_warnings" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="f1_2021_launch_exe" serializeAs="String">
-        <value>C:/Program Files (x86)/Steam/Steam.exe</value>
-      </setting>
-      <setting name="f1_2021_launch_params" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="launch_f1_2021" serializeAs="String">
+      <setting name="speak_only_when_spoken_to" serializeAs="String">
         <value>False</value>
-      </setting>
-      <setting name="f1_2021_spotter_car_length" serializeAs="String">
-        <value>5</value>
-      </setting>
-      <setting name="f1_2021_udp_data_port" serializeAs="String">
-        <value>20777</value>
       </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
