filter out some messages and pearls of wisdom if we're running in 'just the facts' mode

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1369,6 +1369,9 @@
       <setting name="speak_only_when_spoken_to" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="just_the_facts" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
