If master change_log_for_auto_updated.html changes merge master to HTMLhelp (kicking off Help update)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -78,8 +78,7 @@
 -
   branches:
     only:
-      - XXmasterXX
-      # XX should stop it matching and thus stop this running
+      - master
 
   only_commits:
     files:
