--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1378,6 +1378,15 @@
       <setting name="ams2_character_encoding" serializeAs="String">
         <value>UTF-8</value>
       </setting>
+      <setting name="asr_launch_exe" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="launch_asr" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="asr_install_path" serializeAs="String">
+        <value />
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
