--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -53,12 +53,12 @@
     <Compile Include="DummyForm.Designer.cs">
       <DependentUpon>DummyForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="GrammarFiles\TDD\TDD_GetGrammars.cs" />
+    <None Include="GrammarFiles\TDD\TDD_GetGrammars.cs" />
     <Compile Include="Misc\CommandLineParametersReader.cs" />
     <Compile Include="PitMenu\PitMenuEventHandler.cs" />
-    <Compile Include="GrammarFiles\NUnitTestSpeechGrammar.cs" />
-    <Compile Include="GrammarFiles\TestSpeechGrammar.cs" />
-    <Compile Include="GrammarFiles\TDD\TDD_grammarFilter.cs" />
+    <None Include="GrammarFiles\NUnitTestSpeechGrammar.cs" />
+    <None Include="GrammarFiles\TestSpeechGrammar.cs" />
+    <None Include="GrammarFiles\TDD\TDD_grammarFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VROverlayWindow\OverlayDecoratorTests.cs" />
     <Compile Include="VROverlayWindow\Direct3D11CaptureSourceTests.cs" />
@@ -89,7 +89,9 @@
       <Name>CrewChiefV4</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="GrammarFiles\TestStrings\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
