added option to insert a pause between sound fragments. This might help in cases where tightly trimmed sounds have the first part of the sound truncated

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1387,6 +1387,9 @@
       <setting name="asr_install_path" serializeAs="String">
         <value />
       </setting>
+      <setting name="pause_between_message_fragments" serializeAs="String">
+        <value>0</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
