change default trigger word from Chief to Crew Chief to reduce false positive detection rate

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -854,7 +854,7 @@
         <value>NEVER</value>
       </setting>
       <setting name="trigger_word_for_always_on_sre" serializeAs="String">
-        <value>Chief</value>
+        <value>Crew Chief</value>
       </setting>
       <setting name="trigger_word_sre_min_confidence" serializeAs="String">
         <value>0.7</value>
