rf2_enable_auto_clear_tyre_change Clears rF2 pit menu tyre change at start of race

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1387,6 +1387,9 @@
       <setting name="pause_between_message_fragments" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="rf2_enable_auto_clear_tyre_change" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
