mqtt event for async communication

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1387,6 +1387,12 @@
       <setting name="pause_between_message_fragments" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="enable_mqtt_telemetry" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="mqtt_topic_drivername" serializeAs="String">
+        <value>Jim</value>
+      </setting>	
       <setting name="rf2_enable_auto_clear_tyre_change" serializeAs="String">
         <value>True</value>
       </setting>
