update stuff check in to trigger AppVeyor with luck even though there's no real chage

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 # This has to be the same on master and HTMLhelp branches
 # so that merging master changes into HTMLhelp maintains the functionality
 
+# HTMLhelp branch actually updating the gitlab pages files
 -
   branches:
     only:
