One more time... update stuff check in to trigger AppVeyor with luck even though there's no real change

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -86,6 +86,6 @@
     - git config --global user.name "Tony Whitley"
     - git checkout HTMLhelp
     - git merge origin/master
-    # git diff --quiet && git diff --staged --quiet ensures only commit if files changed
-    - git diff --quiet && git diff --staged --quiet || echo Committing...
-    - git diff --quiet && git diff --staged --quiet || git commit -am "Appveyor merge master change_log_for_auto_updated.html" && git push
+    # git diff --quiet && git diff --staged --quiet ensures only commit if files changed 
+    # (not working now so commit anyway)
+    - git commit -am "Appveyor merge master change_log_for_auto_updated.html" && git push
