Property to report how many laps left in timed races rather than how long it will last

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1392,9 +1392,12 @@
       </setting>
       <setting name="mqtt_topic_drivername" serializeAs="String">
         <value>Jim</value>
-      </setting>	
+      </setting>
       <setting name="rf2_enable_auto_clear_tyre_change" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="report_fuel_laps_left_in_timed_races" serializeAs="String">
+        <value>False</value>
       </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
