--- a/CrewChiefV4/Properties/Settings.settings
+++ b/CrewChiefV4/Properties/Settings.settings
@@ -1360,9 +1360,12 @@
     </Setting>
     <Setting Name="mqtt_topic_drivername" Type="System.String" Scope="User">
       <Value Profile="(Default)">Jim</Value>
-    </Setting>  
+    </Setting>
     <Setting Name="rf2_enable_auto_clear_tyre_change" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="report_fuel_laps_left_in_timed_races" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
