allow fuzzy opponent name matching to be disabled

--- a/CrewChiefV4/App.config
+++ b/CrewChiefV4/App.config
@@ -1399,6 +1399,9 @@
       <setting name="report_fuel_laps_left_in_timed_races" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="use_fuzzy_driver_name_matching" serializeAs="String">
+        <value>True</value>
+      </setting>
     </CrewChiefV4.Properties.Settings>
   </userSettings>
 </configuration>
