--- a/CrewChiefV4/CrewChiefV4.csproj
+++ b/CrewChiefV4/CrewChiefV4.csproj
@@ -369,14 +369,30 @@
     <Compile Include="UserInterface\MainWindowMenu.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="UserInterface\Models\OpponentNameSelection.cs" />
     <Compile Include="UserInterface\Models\MyName.cs" />
+    <Compile Include="UserInterface\Models\OpponentNames.cs" />
     <Compile Include="UserInterface\MyName-V.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UserInterface\MyName-V.Designer.cs">
       <DependentUpon>MyName-V.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserInterface\OpponentNames-V.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserInterface\OpponentNames-V.Designer.cs">
+      <DependentUpon>OpponentNames-V.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserInterface\OpponentNameSelection-V.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserInterface\OpponentNameSelection-V.Designer.cs">
+      <DependentUpon>OpponentNameSelection-V.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserInterface\VMs\OpponentNameSelection-VM.cs" />
     <Compile Include="UserInterface\VMs\MyName-VM.cs" />
+    <Compile Include="UserInterface\VMs\OpponentNames_VM.cs" />
     <Compile Include="VROverlayWindow\CaptureScreen.cs" />
     <Compile Include="VROverlayWindow\ChromaKey.cs" />
     <Compile Include="VROverlayWindow\CursorInteraction.cs" />
@@ -586,6 +602,13 @@
     <EmbeddedResource Include="UserInterface\MyName-V.resx">
       <DependentUpon>MyName-V.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserInterface\OpponentNames-V.resx">
+      <DependentUpon>OpponentNames-V.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserInterface\OpponentNameSelection-V.resx">
+      <DependentUpon>OpponentNameSelection-V.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserInterface\PropertiesForm.resx">
       <DependentUpon>PropertiesForm.cs</DependentUpon>
