--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ ModelManifest.xml
 /UnitTest/Packages
 /XunitTest/Packages
 /CrewChiefV4/PitManager/PitManagerEventHandlersTable_*.cs
+/.idea/.idea.CrewChiefV4/.idea
