--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -57,6 +57,7 @@
     <None Include="GrammarFiles\TDD\TDD_GetGrammars.cs" />
     <Compile Include="Misc\CommandLineParametersReader.cs" />
     <Compile Include="Misc\TDD_ParseTimeInput.cs" />
+    <Compile Include="Misc\TestChatText.cs" />
     <Compile Include="Misc\TestFuzzyNames.cs" />
     <Compile Include="PitMenu\PitMenuEventHandler.cs" />
     <None Include="GrammarFiles\NUnitTestSpeechGrammar.cs" />
